make/Compilator.y.output
Terminaux inutilisés dans la grammaire

   tCR
   tEquEqu
   tSupEqu
   tInfEqu
   tSup
   tInf


La règle est inutile dans l'analyseur à cause de conflits

   18 MainReturn: %empty

   32 Instruction: %empty


État 0 conflits: 2 décalage/réduction, 2 réduction/réduction
État 6 conflits: 2 réduction/réduction
État 7 conflits: 1 décalage/réduction
État 21 conflits: 5 décalage/réduction, 1 réduction/réduction
État 23 conflits: 5 décalage/réduction, 2 réduction/réduction
État 40 conflits: 5 décalage/réduction, 2 réduction/réduction
État 52 conflits: 1 décalage/réduction
État 68 conflits: 1 décalage/réduction
État 69 conflits: 1 décalage/réduction
État 131 conflits: 5 décalage/réduction, 1 réduction/réduction
État 133 conflits: 5 décalage/réduction, 1 réduction/réduction
État 145 conflits: 5 décalage/réduction, 1 réduction/réduction


Grammaire

    0 $accept: S $end

    1 S: Functions Main Body
    2  | Functions MainReturn BodyReturn
    3  | Main Body
    4  | MainReturn BodyReturn

    5 Functions: Function Functions
    6          | %empty

    7 RepFunction: tInt tVar
    8            | tInt tVar tComma Repdeclare
    9            | %empty

   10 Function: tVoid tVar tORB RepFunction tCRB Body
   11         | tVar tORB RepFunction tCRB Body
   12         | tInt tVar tORB RepFunction tCRB BodyReturn

   13 Main: tMain tORB tVoid tCRB
   14     | tMain tORB tCRB
   15     | %empty

   16 MainReturn: tInt tMain tORB tVoid tCRB
   17           | tInt tMain tORB tCRB
   18           | %empty

   19 Body: tOCB Instructions tCCB
   20     | %empty

   21 Return: tReturn Expression tSC
   22       | %empty

   23 BodyReturn: tOCB Instructions Return tCCB
   24           | %empty

   25 Instructions: Instruction Instructions
   26             | %empty

   27 Instruction: Assign
   28            | Initialize
   29            | Declare
   30            | tPrintf tORB tVar tCRB tSC
   31            | ConditionnalJump
   32            | %empty

   33 ConditionnalJump: tIf tORB Expression tCRB InitIf Instructions EndIf
   34                 | tIf tORB Expression tCRB InitIf Instructions EndIf InitElse Instructions EndIf
   35                 | tWhile WhileORB Expression tCRB InitWhile Instructions EndWhile

   36 InitIf: tOCB

   37 InitElse: tElse tOCB

   38 EndIf: tCCB

   39 InitWhile: tOCB

   40 EndWhile: tCCB

   41 WhileORB: tORB

   42 Assign: tVar tEqu Expression tSC

   43 RepInitialize: tVar
   44              | tVar tComma RepInitialize

   45 Initialize: tInt RepInitialize tEqu Expression tSC
   46           | tInt tConst RepInitialize tEqu Expression tSC
   47           | tInt tMul RepInitialize tEqu Expression tSC
   48           | tInt tMul tConst RepInitialize tEqu Expression tSC

   49 Repdeclare: tVar tComma Repdeclare
   50           | tVar tSC

   51 Declare: tInt Repdeclare
   52        | tInt tConst Repdeclare
   53        | tInt tMul Repdeclare
   54        | tInt tMul tConst Repdeclare

   55 IntegerValue: tValInt
   56             | tDecVal
   57             | tExpVal

   58 Expression: IntegerValue
   59           | tVar
   60           | tEt tVar
   61           | Expression tAdd Expression
   62           | Expression tSub Expression
   63           | Expression tMul Expression
   64           | Expression tDiv Expression
   65           | tSub Expression
   66           | tAdd Expression
   67           | tORB Expression tCRB


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tInt (258) 7 8 12 16 17 45 46 47 48 51 52 53 54
tMain (259) 13 14 16 17
tReturn (260) 21
tPrintf (261) 30
tConst (262) 46 48 52 54
tVoid (263) 10 13 16
tAdd (264) 61 66
tSub (265) 62 65
tMul (266) 47 48 53 54 63
tEqu (267) 42 45 46 47 48
tSC (268) 21 30 42 45 46 47 48 50
tDiv (269) 64
tOCB (270) 19 23 36 37 39
tCCB (271) 19 23 38 40
tORB (272) 10 11 12 13 14 16 17 30 33 34 41 67
tCRB (273) 10 11 12 13 14 16 17 30 33 34 35 67
tComma (274) 8 44 49
tCR (275)
tVar (276) 7 8 10 11 12 30 42 43 44 49 50 59 60
tValInt (277) 55
tDecVal (278) 56
tExpVal (279) 57
tIf (280) 33 34
tElse (281) 37
tEquEqu (282)
tSupEqu (283)
tInfEqu (284)
tSup (285)
tInf (286)
tWhile (287) 35
tEt (288) 60


Non-terminaux, suivis des règles où ils apparaissent

$accept (34)
    à gauche: 0
S (35)
    à gauche: 1 2 3 4, à droite: 0
Functions (36)
    à gauche: 5 6, à droite: 1 2 5
RepFunction (37)
    à gauche: 7 8 9, à droite: 10 11 12
Function (38)
    à gauche: 10 11 12, à droite: 5
Main (39)
    à gauche: 13 14 15, à droite: 1 3
MainReturn (40)
    à gauche: 16 17 18, à droite: 2 4
Body (41)
    à gauche: 19 20, à droite: 1 3 10 11
Return (42)
    à gauche: 21 22, à droite: 23
BodyReturn (43)
    à gauche: 23 24, à droite: 2 4 12
Instructions (44)
    à gauche: 25 26, à droite: 19 23 25 33 34 35
Instruction (45)
    à gauche: 27 28 29 30 31 32, à droite: 25
ConditionnalJump (46)
    à gauche: 33 34 35, à droite: 31
InitIf (47)
    à gauche: 36, à droite: 33 34
InitElse (48)
    à gauche: 37, à droite: 34
EndIf (49)
    à gauche: 38, à droite: 33 34
InitWhile (50)
    à gauche: 39, à droite: 35
EndWhile (51)
    à gauche: 40, à droite: 35
WhileORB (52)
    à gauche: 41, à droite: 35
Assign (53)
    à gauche: 42, à droite: 27
RepInitialize (54)
    à gauche: 43 44, à droite: 44 45 46 47 48
Initialize (55)
    à gauche: 45 46 47 48, à droite: 28
Repdeclare (56)
    à gauche: 49 50, à droite: 8 49 51 52 53 54
Declare (57)
    à gauche: 51 52 53 54, à droite: 29
IntegerValue (58)
    à gauche: 55 56 57, à droite: 58
Expression (59)
    à gauche: 58 59 60 61 62 63 64 65 66 67, à droite: 21 33 34 35
    42 45 46 47 48 61 62 63 64 65 66 67


État 0

    0 $accept: . S $end

    tInt   décalage et aller à l'état 1
    tMain  décalage et aller à l'état 2
    tVoid  décalage et aller à l'état 3
    tVar   décalage et aller à l'état 4

    $end      réduction par utilisation de la règle 6 (Functions)
    $end      [réduction par utilisation de la règle 15 (Main)]
    $end      [réduction par utilisation de la règle 18 (MainReturn)]
    tInt      [réduction par utilisation de la règle 6 (Functions)]
    tMain     [réduction par utilisation de la règle 6 (Functions)]
    tOCB      réduction par utilisation de la règle 6 (Functions)
    tOCB      [réduction par utilisation de la règle 15 (Main)]
    tOCB      [réduction par utilisation de la règle 18 (MainReturn)]
    $défaut  réduction par utilisation de la règle 6 (Functions)

    S           aller à l'état 5
    Functions   aller à l'état 6
    Function    aller à l'état 7
    Main        aller à l'état 8
    MainReturn  aller à l'état 9


État 1

   12 Function: tInt . tVar tORB RepFunction tCRB BodyReturn
   16 MainReturn: tInt . tMain tORB tVoid tCRB
   17           | tInt . tMain tORB tCRB

    tMain  décalage et aller à l'état 10
    tVar   décalage et aller à l'état 11


État 2

   13 Main: tMain . tORB tVoid tCRB
   14     | tMain . tORB tCRB

    tORB  décalage et aller à l'état 12


État 3

   10 Function: tVoid . tVar tORB RepFunction tCRB Body

    tVar  décalage et aller à l'état 13


État 4

   11 Function: tVar . tORB RepFunction tCRB Body

    tORB  décalage et aller à l'état 14


État 5

    0 $accept: S . $end

    $end  décalage et aller à l'état 15


État 6

    1 S: Functions . Main Body
    2  | Functions . MainReturn BodyReturn

    tInt   décalage et aller à l'état 16
    tMain  décalage et aller à l'état 2

    $end      réduction par utilisation de la règle 15 (Main)
    $end      [réduction par utilisation de la règle 18 (MainReturn)]
    tOCB      réduction par utilisation de la règle 15 (Main)
    tOCB      [réduction par utilisation de la règle 18 (MainReturn)]
    $défaut  réduction par utilisation de la règle 15 (Main)

    Main        aller à l'état 17
    MainReturn  aller à l'état 18


État 7

    5 Functions: Function . Functions

    tInt   décalage et aller à l'état 19
    tVoid  décalage et aller à l'état 3
    tVar   décalage et aller à l'état 4

    tInt      [réduction par utilisation de la règle 6 (Functions)]
    $défaut  réduction par utilisation de la règle 6 (Functions)

    Functions  aller à l'état 20
    Function   aller à l'état 7


État 8

    3 S: Main . Body

    tOCB  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 20 (Body)

    Body  aller à l'état 22


État 9

    4 S: MainReturn . BodyReturn

    tOCB  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 24 (BodyReturn)

    BodyReturn  aller à l'état 24


État 10

   16 MainReturn: tInt tMain . tORB tVoid tCRB
   17           | tInt tMain . tORB tCRB

    tORB  décalage et aller à l'état 25


État 11

   12 Function: tInt tVar . tORB RepFunction tCRB BodyReturn

    tORB  décalage et aller à l'état 26


État 12

   13 Main: tMain tORB . tVoid tCRB
   14     | tMain tORB . tCRB

    tVoid  décalage et aller à l'état 27
    tCRB   décalage et aller à l'état 28


État 13

   10 Function: tVoid tVar . tORB RepFunction tCRB Body

    tORB  décalage et aller à l'état 29


État 14

   11 Function: tVar tORB . RepFunction tCRB Body

    tInt  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 9 (RepFunction)

    RepFunction  aller à l'état 31


État 15

    0 $accept: S $end .

    $défaut  accepter


État 16

   16 MainReturn: tInt . tMain tORB tVoid tCRB
   17           | tInt . tMain tORB tCRB

    tMain  décalage et aller à l'état 10


État 17

    1 S: Functions Main . Body

    tOCB  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 20 (Body)

    Body  aller à l'état 32


État 18

    2 S: Functions MainReturn . BodyReturn

    tOCB  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 24 (BodyReturn)

    BodyReturn  aller à l'état 33


État 19

   12 Function: tInt . tVar tORB RepFunction tCRB BodyReturn

    tVar  décalage et aller à l'état 11


État 20

    5 Functions: Function Functions .

    $défaut  réduction par utilisation de la règle 5 (Functions)


État 21

   19 Body: tOCB . Instructions tCCB

    tInt     décalage et aller à l'état 34
    tPrintf  décalage et aller à l'état 35
    tVar     décalage et aller à l'état 36
    tIf      décalage et aller à l'état 37
    tWhile   décalage et aller à l'état 38

    tInt      [réduction par utilisation de la règle 32 (Instruction)]
    tPrintf   [réduction par utilisation de la règle 32 (Instruction)]
    tCCB      réduction par utilisation de la règle 26 (Instructions)
    tCCB      [réduction par utilisation de la règle 32 (Instruction)]
    tVar      [réduction par utilisation de la règle 32 (Instruction)]
    tIf       [réduction par utilisation de la règle 32 (Instruction)]
    tWhile    [réduction par utilisation de la règle 32 (Instruction)]
    $défaut  réduction par utilisation de la règle 26 (Instructions)

    Instructions      aller à l'état 39
    Instruction       aller à l'état 40
    ConditionnalJump  aller à l'état 41
    Assign            aller à l'état 42
    Initialize        aller à l'état 43
    Declare           aller à l'état 44


État 22

    3 S: Main Body .

    $défaut  réduction par utilisation de la règle 3 (S)


État 23

   23 BodyReturn: tOCB . Instructions Return tCCB

    tInt     décalage et aller à l'état 34
    tPrintf  décalage et aller à l'état 35
    tVar     décalage et aller à l'état 36
    tIf      décalage et aller à l'état 37
    tWhile   décalage et aller à l'état 38

    tInt      [réduction par utilisation de la règle 32 (Instruction)]
    tReturn   réduction par utilisation de la règle 26 (Instructions)
    tReturn   [réduction par utilisation de la règle 32 (Instruction)]
    tPrintf   [réduction par utilisation de la règle 32 (Instruction)]
    tCCB      réduction par utilisation de la règle 26 (Instructions)
    tCCB      [réduction par utilisation de la règle 32 (Instruction)]
    tVar      [réduction par utilisation de la règle 32 (Instruction)]
    tIf       [réduction par utilisation de la règle 32 (Instruction)]
    tWhile    [réduction par utilisation de la règle 32 (Instruction)]
    $défaut  réduction par utilisation de la règle 26 (Instructions)

    Instructions      aller à l'état 45
    Instruction       aller à l'état 40
    ConditionnalJump  aller à l'état 41
    Assign            aller à l'état 42
    Initialize        aller à l'état 43
    Declare           aller à l'état 44


État 24

    4 S: MainReturn BodyReturn .

    $défaut  réduction par utilisation de la règle 4 (S)


État 25

   16 MainReturn: tInt tMain tORB . tVoid tCRB
   17           | tInt tMain tORB . tCRB

    tVoid  décalage et aller à l'état 46
    tCRB   décalage et aller à l'état 47


État 26

   12 Function: tInt tVar tORB . RepFunction tCRB BodyReturn

    tInt  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 9 (RepFunction)

    RepFunction  aller à l'état 48


État 27

   13 Main: tMain tORB tVoid . tCRB

    tCRB  décalage et aller à l'état 49


État 28

   14 Main: tMain tORB tCRB .

    $défaut  réduction par utilisation de la règle 14 (Main)


État 29

   10 Function: tVoid tVar tORB . RepFunction tCRB Body

    tInt  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 9 (RepFunction)

    RepFunction  aller à l'état 50


État 30

    7 RepFunction: tInt . tVar
    8            | tInt . tVar tComma Repdeclare

    tVar  décalage et aller à l'état 51


État 31

   11 Function: tVar tORB RepFunction . tCRB Body

    tCRB  décalage et aller à l'état 52


État 32

    1 S: Functions Main Body .

    $défaut  réduction par utilisation de la règle 1 (S)


État 33

    2 S: Functions MainReturn BodyReturn .

    $défaut  réduction par utilisation de la règle 2 (S)


État 34

   45 Initialize: tInt . RepInitialize tEqu Expression tSC
   46           | tInt . tConst RepInitialize tEqu Expression tSC
   47           | tInt . tMul RepInitialize tEqu Expression tSC
   48           | tInt . tMul tConst RepInitialize tEqu Expression tSC
   51 Declare: tInt . Repdeclare
   52        | tInt . tConst Repdeclare
   53        | tInt . tMul Repdeclare
   54        | tInt . tMul tConst Repdeclare

    tConst  décalage et aller à l'état 53
    tMul    décalage et aller à l'état 54
    tVar    décalage et aller à l'état 55

    RepInitialize  aller à l'état 56
    Repdeclare     aller à l'état 57


État 35

   30 Instruction: tPrintf . tORB tVar tCRB tSC

    tORB  décalage et aller à l'état 58


État 36

   42 Assign: tVar . tEqu Expression tSC

    tEqu  décalage et aller à l'état 59


État 37

   33 ConditionnalJump: tIf . tORB Expression tCRB InitIf Instructions EndIf
   34                 | tIf . tORB Expression tCRB InitIf Instructions EndIf InitElse Instructions EndIf

    tORB  décalage et aller à l'état 60


État 38

   35 ConditionnalJump: tWhile . WhileORB Expression tCRB InitWhile Instructions EndWhile

    tORB  décalage et aller à l'état 61

    WhileORB  aller à l'état 62


État 39

   19 Body: tOCB Instructions . tCCB

    tCCB  décalage et aller à l'état 63


État 40

   25 Instructions: Instruction . Instructions

    tInt     décalage et aller à l'état 34
    tPrintf  décalage et aller à l'état 35
    tVar     décalage et aller à l'état 36
    tIf      décalage et aller à l'état 37
    tWhile   décalage et aller à l'état 38

    tInt      [réduction par utilisation de la règle 32 (Instruction)]
    tReturn   réduction par utilisation de la règle 26 (Instructions)
    tReturn   [réduction par utilisation de la règle 32 (Instruction)]
    tPrintf   [réduction par utilisation de la règle 32 (Instruction)]
    tCCB      réduction par utilisation de la règle 26 (Instructions)
    tCCB      [réduction par utilisation de la règle 32 (Instruction)]
    tVar      [réduction par utilisation de la règle 32 (Instruction)]
    tIf       [réduction par utilisation de la règle 32 (Instruction)]
    tWhile    [réduction par utilisation de la règle 32 (Instruction)]
    $défaut  réduction par utilisation de la règle 26 (Instructions)

    Instructions      aller à l'état 64
    Instruction       aller à l'état 40
    ConditionnalJump  aller à l'état 41
    Assign            aller à l'état 42
    Initialize        aller à l'état 43
    Declare           aller à l'état 44


État 41

   31 Instruction: ConditionnalJump .

    $défaut  réduction par utilisation de la règle 31 (Instruction)


État 42

   27 Instruction: Assign .

    $défaut  réduction par utilisation de la règle 27 (Instruction)


État 43

   28 Instruction: Initialize .

    $défaut  réduction par utilisation de la règle 28 (Instruction)


État 44

   29 Instruction: Declare .

    $défaut  réduction par utilisation de la règle 29 (Instruction)


État 45

   23 BodyReturn: tOCB Instructions . Return tCCB

    tReturn  décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 22 (Return)

    Return  aller à l'état 66


État 46

   16 MainReturn: tInt tMain tORB tVoid . tCRB

    tCRB  décalage et aller à l'état 67


État 47

   17 MainReturn: tInt tMain tORB tCRB .

    $défaut  réduction par utilisation de la règle 17 (MainReturn)


État 48

   12 Function: tInt tVar tORB RepFunction . tCRB BodyReturn

    tCRB  décalage et aller à l'état 68


État 49

   13 Main: tMain tORB tVoid tCRB .

    $défaut  réduction par utilisation de la règle 13 (Main)


État 50

   10 Function: tVoid tVar tORB RepFunction . tCRB Body

    tCRB  décalage et aller à l'état 69


État 51

    7 RepFunction: tInt tVar .
    8            | tInt tVar . tComma Repdeclare

    tComma  décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 7 (RepFunction)


État 52

   11 Function: tVar tORB RepFunction tCRB . Body

    tOCB  décalage et aller à l'état 21

    tOCB      [réduction par utilisation de la règle 20 (Body)]
    $défaut  réduction par utilisation de la règle 20 (Body)

    Body  aller à l'état 71


État 53

   46 Initialize: tInt tConst . RepInitialize tEqu Expression tSC
   52 Declare: tInt tConst . Repdeclare

    tVar  décalage et aller à l'état 55

    RepInitialize  aller à l'état 72
    Repdeclare     aller à l'état 73


État 54

   47 Initialize: tInt tMul . RepInitialize tEqu Expression tSC
   48           | tInt tMul . tConst RepInitialize tEqu Expression tSC
   53 Declare: tInt tMul . Repdeclare
   54        | tInt tMul . tConst Repdeclare

    tConst  décalage et aller à l'état 74
    tVar    décalage et aller à l'état 55

    RepInitialize  aller à l'état 75
    Repdeclare     aller à l'état 76


État 55

   43 RepInitialize: tVar .
   44              | tVar . tComma RepInitialize
   49 Repdeclare: tVar . tComma Repdeclare
   50           | tVar . tSC

    tSC     décalage et aller à l'état 77
    tComma  décalage et aller à l'état 78

    $défaut  réduction par utilisation de la règle 43 (RepInitialize)


État 56

   45 Initialize: tInt RepInitialize . tEqu Expression tSC

    tEqu  décalage et aller à l'état 79


État 57

   51 Declare: tInt Repdeclare .

    $défaut  réduction par utilisation de la règle 51 (Declare)


État 58

   30 Instruction: tPrintf tORB . tVar tCRB tSC

    tVar  décalage et aller à l'état 80


État 59

   42 Assign: tVar tEqu . Expression tSC

    tAdd     décalage et aller à l'état 81
    tSub     décalage et aller à l'état 82
    tORB     décalage et aller à l'état 83
    tVar     décalage et aller à l'état 84
    tValInt  décalage et aller à l'état 85
    tDecVal  décalage et aller à l'état 86
    tExpVal  décalage et aller à l'état 87
    tEt      décalage et aller à l'état 88

    IntegerValue  aller à l'état 89
    Expression    aller à l'état 90


État 60

   33 ConditionnalJump: tIf tORB . Expression tCRB InitIf Instructions EndIf
   34                 | tIf tORB . Expression tCRB InitIf Instructions EndIf InitElse Instructions EndIf

    tAdd     décalage et aller à l'état 81
    tSub     décalage et aller à l'état 82
    tORB     décalage et aller à l'état 83
    tVar     décalage et aller à l'état 84
    tValInt  décalage et aller à l'état 85
    tDecVal  décalage et aller à l'état 86
    tExpVal  décalage et aller à l'état 87
    tEt      décalage et aller à l'état 88

    IntegerValue  aller à l'état 89
    Expression    aller à l'état 91


État 61

   41 WhileORB: tORB .

    $défaut  réduction par utilisation de la règle 41 (WhileORB)


État 62

   35 ConditionnalJump: tWhile WhileORB . Expression tCRB InitWhile Instructions EndWhile

    tAdd     décalage et aller à l'état 81
    tSub     décalage et aller à l'état 82
    tORB     décalage et aller à l'état 83
    tVar     décalage et aller à l'état 84
    tValInt  décalage et aller à l'état 85
    tDecVal  décalage et aller à l'état 86
    tExpVal  décalage et aller à l'état 87
    tEt      décalage et aller à l'état 88

    IntegerValue  aller à l'état 89
    Expression    aller à l'état 92


État 63

   19 Body: tOCB Instructions tCCB .

    $défaut  réduction par utilisation de la règle 19 (Body)


État 64

   25 Instructions: Instruction Instructions .

    $défaut  réduction par utilisation de la règle 25 (Instructions)


État 65

   21 Return: tReturn . Expression tSC

    tAdd     décalage et aller à l'état 81
    tSub     décalage et aller à l'état 82
    tORB     décalage et aller à l'état 83
    tVar     décalage et aller à l'état 84
    tValInt  décalage et aller à l'état 85
    tDecVal  décalage et aller à l'état 86
    tExpVal  décalage et aller à l'état 87
    tEt      décalage et aller à l'état 88

    IntegerValue  aller à l'état 89
    Expression    aller à l'état 93


État 66

   23 BodyReturn: tOCB Instructions Return . tCCB

    tCCB  décalage et aller à l'état 94


État 67

   16 MainReturn: tInt tMain tORB tVoid tCRB .

    $défaut  réduction par utilisation de la règle 16 (MainReturn)


État 68

   12 Function: tInt tVar tORB RepFunction tCRB . BodyReturn

    tOCB  décalage et aller à l'état 23

    tOCB      [réduction par utilisation de la règle 24 (BodyReturn)]
    $défaut  réduction par utilisation de la règle 24 (BodyReturn)

    BodyReturn  aller à l'état 95


État 69

   10 Function: tVoid tVar tORB RepFunction tCRB . Body

    tOCB  décalage et aller à l'état 21

    tOCB      [réduction par utilisation de la règle 20 (Body)]
    $défaut  réduction par utilisation de la règle 20 (Body)

    Body  aller à l'état 96


État 70

    8 RepFunction: tInt tVar tComma . Repdeclare

    tVar  décalage et aller à l'état 97

    Repdeclare  aller à l'état 98


État 71

   11 Function: tVar tORB RepFunction tCRB Body .

    $défaut  réduction par utilisation de la règle 11 (Function)


État 72

   46 Initialize: tInt tConst RepInitialize . tEqu Expression tSC

    tEqu  décalage et aller à l'état 99


État 73

   52 Declare: tInt tConst Repdeclare .

    $défaut  réduction par utilisation de la règle 52 (Declare)


État 74

   48 Initialize: tInt tMul tConst . RepInitialize tEqu Expression tSC
   54 Declare: tInt tMul tConst . Repdeclare

    tVar  décalage et aller à l'état 55

    RepInitialize  aller à l'état 100
    Repdeclare     aller à l'état 101


État 75

   47 Initialize: tInt tMul RepInitialize . tEqu Expression tSC

    tEqu  décalage et aller à l'état 102


État 76

   53 Declare: tInt tMul Repdeclare .

    $défaut  réduction par utilisation de la règle 53 (Declare)


État 77

   50 Repdeclare: tVar tSC .

    $défaut  réduction par utilisation de la règle 50 (Repdeclare)


État 78

   44 RepInitialize: tVar tComma . RepInitialize
   49 Repdeclare: tVar tComma . Repdeclare

    tVar  décalage et aller à l'état 55

    RepInitialize  aller à l'état 103
    Repdeclare     aller à l'état 104


État 79

   45 Initialize: tInt RepInitialize tEqu . Expression tSC

    tAdd     décalage et aller à l'état 81
    tSub     décalage et aller à l'état 82
    tORB     décalage et aller à l'état 83
    tVar     décalage et aller à l'état 84
    tValInt  décalage et aller à l'état 85
    tDecVal  décalage et aller à l'état 86
    tExpVal  décalage et aller à l'état 87
    tEt      décalage et aller à l'état 88

    IntegerValue  aller à l'état 89
    Expression    aller à l'état 105


État 80

   30 Instruction: tPrintf tORB tVar . tCRB tSC

    tCRB  décalage et aller à l'état 106


État 81

   66 Expression: tAdd . Expression

    tAdd     décalage et aller à l'état 81
    tSub     décalage et aller à l'état 82
    tORB     décalage et aller à l'état 83
    tVar     décalage et aller à l'état 84
    tValInt  décalage et aller à l'état 85
    tDecVal  décalage et aller à l'état 86
    tExpVal  décalage et aller à l'état 87
    tEt      décalage et aller à l'état 88

    IntegerValue  aller à l'état 89
    Expression    aller à l'état 107


État 82

   65 Expression: tSub . Expression

    tAdd     décalage et aller à l'état 81
    tSub     décalage et aller à l'état 82
    tORB     décalage et aller à l'état 83
    tVar     décalage et aller à l'état 84
    tValInt  décalage et aller à l'état 85
    tDecVal  décalage et aller à l'état 86
    tExpVal  décalage et aller à l'état 87
    tEt      décalage et aller à l'état 88

    IntegerValue  aller à l'état 89
    Expression    aller à l'état 108


État 83

   67 Expression: tORB . Expression tCRB

    tAdd     décalage et aller à l'état 81
    tSub     décalage et aller à l'état 82
    tORB     décalage et aller à l'état 83
    tVar     décalage et aller à l'état 84
    tValInt  décalage et aller à l'état 85
    tDecVal  décalage et aller à l'état 86
    tExpVal  décalage et aller à l'état 87
    tEt      décalage et aller à l'état 88

    IntegerValue  aller à l'état 89
    Expression    aller à l'état 109


État 84

   59 Expression: tVar .

    $défaut  réduction par utilisation de la règle 59 (Expression)


État 85

   55 IntegerValue: tValInt .

    $défaut  réduction par utilisation de la règle 55 (IntegerValue)


État 86

   56 IntegerValue: tDecVal .

    $défaut  réduction par utilisation de la règle 56 (IntegerValue)


État 87

   57 IntegerValue: tExpVal .

    $défaut  réduction par utilisation de la règle 57 (IntegerValue)


État 88

   60 Expression: tEt . tVar

    tVar  décalage et aller à l'état 110


État 89

   58 Expression: IntegerValue .

    $défaut  réduction par utilisation de la règle 58 (Expression)


État 90

   42 Assign: tVar tEqu Expression . tSC
   61 Expression: Expression . tAdd Expression
   62           | Expression . tSub Expression
   63           | Expression . tMul Expression
   64           | Expression . tDiv Expression

    tAdd  décalage et aller à l'état 111
    tSub  décalage et aller à l'état 112
    tMul  décalage et aller à l'état 113
    tSC   décalage et aller à l'état 114
    tDiv  décalage et aller à l'état 115


État 91

   33 ConditionnalJump: tIf tORB Expression . tCRB InitIf Instructions EndIf
   34                 | tIf tORB Expression . tCRB InitIf Instructions EndIf InitElse Instructions EndIf
   61 Expression: Expression . tAdd Expression
   62           | Expression . tSub Expression
   63           | Expression . tMul Expression
   64           | Expression . tDiv Expression

    tAdd  décalage et aller à l'état 111
    tSub  décalage et aller à l'état 112
    tMul  décalage et aller à l'état 113
    tDiv  décalage et aller à l'état 115
    tCRB  décalage et aller à l'état 116


État 92

   35 ConditionnalJump: tWhile WhileORB Expression . tCRB InitWhile Instructions EndWhile
   61 Expression: Expression . tAdd Expression
   62           | Expression . tSub Expression
   63           | Expression . tMul Expression
   64           | Expression . tDiv Expression

    tAdd  décalage et aller à l'état 111
    tSub  décalage et aller à l'état 112
    tMul  décalage et aller à l'état 113
    tDiv  décalage et aller à l'état 115
    tCRB  décalage et aller à l'état 117


État 93

   21 Return: tReturn Expression . tSC
   61 Expression: Expression . tAdd Expression
   62           | Expression . tSub Expression
   63           | Expression . tMul Expression
   64           | Expression . tDiv Expression

    tAdd  décalage et aller à l'état 111
    tSub  décalage et aller à l'état 112
    tMul  décalage et aller à l'état 113
    tSC   décalage et aller à l'état 118
    tDiv  décalage et aller à l'état 115


État 94

   23 BodyReturn: tOCB Instructions Return tCCB .

    $défaut  réduction par utilisation de la règle 23 (BodyReturn)


État 95

   12 Function: tInt tVar tORB RepFunction tCRB BodyReturn .

    $défaut  réduction par utilisation de la règle 12 (Function)


État 96

   10 Function: tVoid tVar tORB RepFunction tCRB Body .

    $défaut  réduction par utilisation de la règle 10 (Function)


État 97

   49 Repdeclare: tVar . tComma Repdeclare
   50           | tVar . tSC

    tSC     décalage et aller à l'état 77
    tComma  décalage et aller à l'état 119


État 98

    8 RepFunction: tInt tVar tComma Repdeclare .

    $défaut  réduction par utilisation de la règle 8 (RepFunction)


État 99

   46 Initialize: tInt tConst RepInitialize tEqu . Expression tSC

    tAdd     décalage et aller à l'état 81
    tSub     décalage et aller à l'état 82
    tORB     décalage et aller à l'état 83
    tVar     décalage et aller à l'état 84
    tValInt  décalage et aller à l'état 85
    tDecVal  décalage et aller à l'état 86
    tExpVal  décalage et aller à l'état 87
    tEt      décalage et aller à l'état 88

    IntegerValue  aller à l'état 89
    Expression    aller à l'état 120


État 100

   48 Initialize: tInt tMul tConst RepInitialize . tEqu Expression tSC

    tEqu  décalage et aller à l'état 121


État 101

   54 Declare: tInt tMul tConst Repdeclare .

    $défaut  réduction par utilisation de la règle 54 (Declare)


État 102

   47 Initialize: tInt tMul RepInitialize tEqu . Expression tSC

    tAdd     décalage et aller à l'état 81
    tSub     décalage et aller à l'état 82
    tORB     décalage et aller à l'état 83
    tVar     décalage et aller à l'état 84
    tValInt  décalage et aller à l'état 85
    tDecVal  décalage et aller à l'état 86
    tExpVal  décalage et aller à l'état 87
    tEt      décalage et aller à l'état 88

    IntegerValue  aller à l'état 89
    Expression    aller à l'état 122


État 103

   44 RepInitialize: tVar tComma RepInitialize .

    $défaut  réduction par utilisation de la règle 44 (RepInitialize)


État 104

   49 Repdeclare: tVar tComma Repdeclare .

    $défaut  réduction par utilisation de la règle 49 (Repdeclare)


État 105

   45 Initialize: tInt RepInitialize tEqu Expression . tSC
   61 Expression: Expression . tAdd Expression
   62           | Expression . tSub Expression
   63           | Expression . tMul Expression
   64           | Expression . tDiv Expression

    tAdd  décalage et aller à l'état 111
    tSub  décalage et aller à l'état 112
    tMul  décalage et aller à l'état 113
    tSC   décalage et aller à l'état 123
    tDiv  décalage et aller à l'état 115


État 106

   30 Instruction: tPrintf tORB tVar tCRB . tSC

    tSC  décalage et aller à l'état 124


État 107

   61 Expression: Expression . tAdd Expression
   62           | Expression . tSub Expression
   63           | Expression . tMul Expression
   64           | Expression . tDiv Expression
   66           | tAdd Expression .

    $défaut  réduction par utilisation de la règle 66 (Expression)


État 108

   61 Expression: Expression . tAdd Expression
   62           | Expression . tSub Expression
   63           | Expression . tMul Expression
   64           | Expression . tDiv Expression
   65           | tSub Expression .

    $défaut  réduction par utilisation de la règle 65 (Expression)


État 109

   61 Expression: Expression . tAdd Expression
   62           | Expression . tSub Expression
   63           | Expression . tMul Expression
   64           | Expression . tDiv Expression
   67           | tORB Expression . tCRB

    tAdd  décalage et aller à l'état 111
    tSub  décalage et aller à l'état 112
    tMul  décalage et aller à l'état 113
    tDiv  décalage et aller à l'état 115
    tCRB  décalage et aller à l'état 125


État 110

   60 Expression: tEt tVar .

    $défaut  réduction par utilisation de la règle 60 (Expression)


État 111

   61 Expression: Expression tAdd . Expression

    tAdd     décalage et aller à l'état 81
    tSub     décalage et aller à l'état 82
    tORB     décalage et aller à l'état 83
    tVar     décalage et aller à l'état 84
    tValInt  décalage et aller à l'état 85
    tDecVal  décalage et aller à l'état 86
    tExpVal  décalage et aller à l'état 87
    tEt      décalage et aller à l'état 88

    IntegerValue  aller à l'état 89
    Expression    aller à l'état 126


État 112

   62 Expression: Expression tSub . Expression

    tAdd     décalage et aller à l'état 81
    tSub     décalage et aller à l'état 82
    tORB     décalage et aller à l'état 83
    tVar     décalage et aller à l'état 84
    tValInt  décalage et aller à l'état 85
    tDecVal  décalage et aller à l'état 86
    tExpVal  décalage et aller à l'état 87
    tEt      décalage et aller à l'état 88

    IntegerValue  aller à l'état 89
    Expression    aller à l'état 127

